# somnuscape

./: .gitignore  Cargo.toml  Design.md  askama.toml
.cargo/: config.toml
.github/workflows/: rust.yml
assets/: htmx-ws.js
examples/: rooms.yaml
primers/: connector.yaml  names.yaml  rooms.yaml  stats.yaml
prompts/: generate_rooms.md  link_rooms.md  stat_creature.md
src/: action.rs  characters.rs  combat.rs  commands.rs  config.rs  connections.rs  conversation.rs  core.rs  creatures.rs  dungeon.rs  engine.rs  main.rs  player.rs  routes.rs  schema.rs  state.rs  web_types.rs  world.rs  worldbuilding.rs
src/generation/: bestiary.rs  mod.rs  place.rs
src/include/: core.fnl
src/mechanics/: characters.rs  mod.rs
src/mud/: character.rs  items.rs  mod.rs  world.rs
templates/: adventure.html  base.html  character_creation.html  chat_msgs.html  game.html  generate_rooms.md  index.html  link_rooms.md  nav.html  place_list.md  stat_creature.md
templates/elements/: action_input.html  action_menu.html  chatbox.html  log.html  nav.html
