[package]
name = "somnuscape"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-web = "4.3.1"
anyhow = "1.0.72"
argon2rs = "0.2.5"
askama = "0.12.0"
askama_actix = { version = "0.14.0", features = ["serde-json"] }
async-openai = "0.12.2"
base64 = "0.21.2"
dotenvy = "0.15.7"
env_logger = "0.10.0"
futures = "0.3.28"
lazy_static = "1.4.0"
rand = "0.8.5"
redis = { version = "0.23.2", features = ["aio", "async-std-comp", "tokio"] }
regex = "1.9.3"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
