[package]
name = "somnuscape"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
askama = "0.12.1"
console-subscriber = "0.2.0"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
futures = "0.3.30"
nectar = "0.3.0"
ollama-rs = "0.1.9"
rand = "0.8.5"
regex = "1.10.4"
seahash = "4.1.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_yaml = "0.9.34"
strsim = "0.11.1"
tokio = { version = "1.37.0", features = ["full", "tracing"] }
tokio-util = { version = "0.7.11", features = ["codec"] }
tracing = "0.1.40"
